

syntax = "proto3";

option csharp_namespace = "StudentsMicroservice";

import "StudentsProjectEntities.proto";


service StudentsGrpcService {
	rpc GetStudents (GetStudentsRequest) returns (GetStudentsResponse);
	rpc GetStudentDetails (GetStudentDetailsRequest) returns (GetStudentDetailsResponse);
	rpc DeleteStudent (DeleteStudentRequest) returns (DeleteStudentResponse);
}

service GradesGrpcService{
	rpc AddGrade (AddGradeRequest) returns (AddGradeResponse);
}

service CoursesGrpcService{
	rpc GetCourse (GetCourseRequest) returns (GetCourseResponse);
}